feat(backend): add comment field to the ingredients